Fixed Scaling Issues on mobile, Presumably fixed no keyboard input, finish mobile movement/interaction

--- a/docs/style.css
+++ b/docs/style.css
@@ -28,8 +28,9 @@ canvas {
 
 #submitButton {
     border-radius: 20px;
-    border: 4px solid black;
-    height: 50px;
+    border: 0.5vh solid black;
+    font-size: 3vh;
+    height: 4vh;
     width: 15vw;
     text-align: center;
     align-items: center;
@@ -53,7 +54,7 @@ canvas {
 }
 
 #cashierScreen .topBar .orderResults {
-    width: 15%;
+    width: 14%;
     margin: 1px;
     border: solid 2px black;
     border-radius: 15px;
@@ -62,8 +63,9 @@ canvas {
 }
 
 #cashierScreen .topBar .orderResults #results {
-    width: calc(100% - 20px);
+    width: calc(100% - 2vh);
     height: 100%;
+    padding-inline-start: -10px;
 }
 
 #cashierScreen .topBar {
@@ -75,10 +77,10 @@ canvas {
 
 #cashierScreen .bottomBar {
     bottom: 0;
-    border: 5px solid black;
+    border: 0.7vh solid black;
     border-radius: 15px;
     height: 55%;
-    width: calc(100% - 10px);
+    width: calc(100% - 0.7vh);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -108,8 +110,12 @@ canvas {
     justify-content: space-between;
 }
 
+#orderList {
+    padding-inline-start: 4vh;
+}
+
 #orderList li {
-    margin-top: 10px;
+    margin-top: 1vh;
 }
 
 #animator {
@@ -138,9 +144,9 @@ canvas {
 }
 
 .leftSide .menu .column div {
-    border: 2px solid black;
-    border-radius: 10px;
-    margin: 2px;
+    border: 0.5vh solid black;
+    border-radius: 2vh;
+    margin: 0.4vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -155,11 +161,13 @@ canvas {
     text-align: justify;
     margin-left: 2vw;
     margin-right: 2vw;
+    font-size: 2vh;
 }
 
 #levelInfo {
     padding-top: 2vh;
     padding-bottom: 2vh;
+    font-size: 2vh;
 }
 
 #levelTitle {
@@ -237,10 +245,11 @@ canvas {
     text-align: center;
     width: 95%;
     height: 100%;
-    margin: 5px;
-    border: 2px solid black;
-    border-radius: 10px;
+    margin: 0.2vh;
+    border: 0.2vh solid black;
+    border-radius: 5px;
     transition: 0.2s;
+    font-size: 3vh;
 }
 
 .menuSelector div:hover {
@@ -263,16 +272,17 @@ canvas {
 }
 
 #cashierScreen .bottomBar .rightSide .moneyTaker {
-    width: 12vh;
+    width: 13vh;
     height: 20vh;
-    border: 5px solid black;
+    border: 0.6vh solid black;
     border-radius: 10px;
 }
 
 #cashierScreen .bottomBar .rightSide .moneyTaker .Screen {
-    border: 2px solid black;
-    margin: 20px;
+    border: 0.5vh solid black;
+    margin: 2vh;
     text-align: center;
+    font-size: 2.4vh;
 }
 
 #cashierScreen .bottomBar .cashierTill {
@@ -307,14 +317,17 @@ canvas {
 }
 
 #MainMenu div {
-    width: 20vw;
+    width: 30vh;
     height: 3.5vh;
-    border: 4px solid black;
+    border: 0.5vh solid black;
     margin: 10px;
     text-align: center;
-    padding-top: 1vh;
     border-radius: 10px;
     transition: 0.2s;
+    font-size: small;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #MainMenu div:hover {
